--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://172.30.117.79:3306/demo?useSSL=false
+spring.datasource.username=mysql
+spring.datasource.password=mysql
 spring.sql.init.platform=mysql
+
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://mysql:3306/demo?useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.sql.init.platform=mysql
+
 logging.level.org.springframework.batch.integration=debug
+
+spring.rabbitmq.host=34.74.80.193
+spring.rabbitmq.password=gImFD43lrpWaDdlbxdizi4w3umYgH5vg
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=default_user_8xncsyVdLd6R4A2agO8
