--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+#DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.30.117.79:3306/demo?useSSL=false
-spring.datasource.username=mysql
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 spring.sql.init.platform=mysql
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
